--- a/resources/assets/css/login-page.css
+++ b/resources/assets/css/login-page.css
@@ -48,7 +48,6 @@ input, button {
 .cont {
   position: relative;
   height: 100%;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg");
   background-size: cover;
   overflow: auto;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -61,7 +60,7 @@ input, button {
   margin-left: -15rem;
   margin-top: -26.5rem;
   width: 30rem;
-  height: 53rem;
+  height: 40rem;
   overflow: hidden;
 }
 
@@ -83,21 +82,14 @@ input, button {
           transform: scale(1.1);
 }
 .login__check {
-  position: absolute;
-  top: 14rem;
-  left: 13.5rem;
-  width: 14rem;
-  height: 2rem;
-  background: #fff;
-  -webkit-transform-origin: 0 100%;
-          transform-origin: 0 100%;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+ background-image: url("http://localhost/mbatik/resources/image/full.png");
+ background-size: 300px 200px;
+ height: 200px;
 }
 
 .login__form {
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 0;
   width: 100%;
   height: 50%;
